--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "ethers": "^5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-scripts": "5.0.1",
     "wagmi": "^0.12.12",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "wouter": "^2.10.1"
   },
   "scripts": {
     "start": "react-scripts start",
