--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@huddle01/huddle01-client": "^0.0.10",
     "@huddle01/react": "^0.0.10",
     "@lighthouse-web3/sdk": "^0.2.3",
     "@supabase/supabase-js": "^2.21.0",
@@ -14,10 +15,13 @@
     "connectkit": "^1.2.3",
     "ethers": "^5",
     "framer-motion": "^10.12.7",
+    "lodash": "^4.17.21",
+    "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "react-qr-reader": "^2.2.1",
     "react-scripts": "5.0.1",
     "react-supabase": "^0.2.0",
     "tailwindcss-animate": "^1.0.5",
